--- a/docker/tasks/main.yml
+++ b/docker/tasks/main.yml
@@ -1,5 +1,12 @@
 ---
 # tasks file for docker
+- name: install Docker apt package
+  apt:
+    pkg: gpg
+    state: latest
+    update_cache: true
+  become: true
+
 - name: add Docker apt key
   apt_key:
     url: https://download.docker.com/linux/ubuntu/gpg
@@ -10,19 +17,19 @@
 - name: add docker apt repo
   apt_repository:
     repo: "deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_lsb.codename }} stable"
-    update_cache: yes
+    update_cache: true
   become: true
 
 - name: install Docker apt package
   apt:
     pkg: docker-ce
     state: latest
-    update_cache: yes
+    update_cache: true
   become: true
 
 - name: add vagrant user to docker group.
   user:
     name: vagrant
     groups: docker
-    append: yes
+    append: true
   become: true
