Show details of the passed tests

--- a/docker/tasks/main.yml
+++ b/docker/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 # tasks file for docker
-- name: install Docker apt package
+- name: install gpg package
   apt:
     pkg: gpg
     state: latest
